# First-lab

./: README.md
Autotools/: ChangeLog  Makefile  Makefile.am  config.status  configure  configure.ac  configure.in~  configure~  shownotegen  shownotegen.c
Autotools/.deps/: shownotegen.Po
Autotools/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
Autotools/task_1_automake-1.0/: AUTHORS  Makefile.in  NEWS  README
Autotools/task_1_automake-1.0/_build/sub/: Makefile  config.h  config.status  shownotegen
Autotools/task_1_automake-1.0/_build/sub/.deps/: shownotegen.Po
